app: fix menu dropdown height
But only on desktops. This should avoid showing scrollbar on the side when
opening for example long list of periods.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,3 +11,11 @@ a.dropdown-item.bg-inverse:hover {
   border-color: #292b2c!important;
   padding: .2em 1em;
 }
+
+@media (min-width: 992px) {
+  .scrollable-menu {
+    height: auto;
+    max-height: 400px;
+    overflow-x: hidden;
+  }
+}
